[tool.poetry]
name = "python-twitter-api"
version = "0.1.0"
description = "A simple Python wrapper for Twitter API v2 ✨ 🍰 ✨"
authors = ["ikaroskun <merle.liukun@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/sns-sdks/python-twitter"
keywords = ["twitter", "twitter sdk", "twitter api"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
