[tool.poetry]
name = "python-twitter-v2"
version = "0.9.1"
description = "A simple Python wrapper for Twitter API v2 ✨ 🍰 ✨"
authors = ["ikaroskun <merle.liukun@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/sns-sdks/python-twitter"
keywords = ["twitter", "twitter sdk", "twitter api", "Twitter API V2"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "pytwitter"},
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28"
dataclasses-json = "^0.5.7"
Authlib = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^4.0.0"
responses = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
